changes in style.css

--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ background-color: rgb(20, 168, 168);
 }
 .all_login .admision_btn{
 margin-top: 22px;
-background:blueviolet;
+background:rgb(64, 150, 15);
 }
 .all_login .login_btn{
   margin-top: 22px;
